--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,5 +32,7 @@ language: en
 publisher: Project Gutenberg
 rights: Public domain in the USA.
 rights_url: http://creativecommons.org/about/pdm
+subjects:
+- GITenberg
 title: The Raft
 url: http://www.gutenberg.org/ebooks/50498
